@@ -41,6 +41,7 @@ Version 1.11.4+dev:
    * Changed: Decreased the pango cairo dependency to version 1.21.3.
    * Changed: Mark system headers as system headers in CMake.
    * Fixed the recall list sometimes getting confused when dismissing a recall.
+   * Prevent unchecked memory access in cut_surface()
 
 Version 1.11.4:
  * AI:
